# test-1

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
kernels/: base58.cu  utils.cu  utils.h  vanity.cu  vanity.h
src/: main.rs
